--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,8 +28,8 @@ on:
         default: false
 
 env:
-  DOCKERHUB_REPO: 1panel/cordys-crm
-  GHCR_REPO: ghcr.io/${{ github.repository }}
+  # 使用 GitHub Container Registry（无需额外配置 secrets）
+  IMAGE_REPO: ghcr.io/${{ github.repository }}
 
 jobs:
   # ============================================================
@@ -64,12 +64,6 @@ jobs:
       - name: 设置 Docker Buildx
         uses: docker/setup-buildx-action@v3
       
-      - name: 登录 Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      
       - name: 登录 GitHub Container Registry
         uses: docker/login-action@v3
         with:
@@ -85,11 +79,9 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            ${{ env.DOCKERHUB_REPO }}:${{ steps.version.outputs.version }}
-            ${{ env.DOCKERHUB_REPO }}:${{ steps.version.outputs.version_number }}
-            ${{ env.DOCKERHUB_REPO }}:latest
-            ${{ env.GHCR_REPO }}:${{ steps.version.outputs.version }}
-            ${{ env.GHCR_REPO }}:latest
+            ${{ env.IMAGE_REPO }}:${{ steps.version.outputs.version }}
+            ${{ env.IMAGE_REPO }}:${{ steps.version.outputs.version_number }}
+            ${{ env.IMAGE_REPO }}:latest
           build-args: |
             CRM_VERSION=${{ steps.version.outputs.version }}
           cache-from: type=gha
@@ -99,50 +91,51 @@ jobs:
         run: |
           mkdir -p release
           
-          # 拉取镜像
-          docker pull --platform linux/amd64 ${{ env.DOCKERHUB_REPO }}:${{ steps.version.outputs.version }}
+          # 拉取镜像（从 GitHub Container Registry）
+          docker pull --platform linux/amd64 ${{ env.IMAGE_REPO }}:${{ steps.version.outputs.version }}
           
           # 保存镜像
-          docker save ${{ env.DOCKERHUB_REPO }}:${{ steps.version.outputs.version }} | gzip > release/cordys-crm-${{ steps.version.outputs.version_number }}-amd64.tar.gz
+          docker save ${{ env.IMAGE_REPO }}:${{ steps.version.outputs.version }} | gzip > release/cordys-crm-${{ steps.version.outputs.version_number }}-amd64.tar.gz
           
           # 创建安装脚本
-          cat > release/install.sh << 'EOF'
-          #!/bin/bash
-          set -e
-          
-          VERSION="${1:-latest}"
-          IMAGE_FILE="cordys-crm-${VERSION}-amd64.tar.gz"
-          
-          echo "=========================================="
-          echo "Cordys CRM 离线安装脚本"
-          echo "版本: ${VERSION}"
-          echo "=========================================="
-          
-          if [ -f "$IMAGE_FILE" ]; then
-              echo "正在加载 Docker 镜像..."
-              gunzip -c "$IMAGE_FILE" | docker load
-          else
-              echo "错误: 找不到镜像文件 $IMAGE_FILE"
-              exit 1
-          fi
-          
-          echo "正在启动 Cordys CRM..."
-          docker run -d \
-            --name cordys-crm \
-            --restart unless-stopped \
-            -p 8081:8081 \
-            -p 8082:8082 \
-            -v ~/cordys:/opt/cordys \
-            1panel/cordys-crm:${VERSION}
-          
-          echo ""
-          echo "=========================================="
-          echo "Cordys CRM 安装完成！"
-          echo "访问地址: http://localhost:8081"
-          echo "默认账号: admin"
-          echo "默认密码: CordysCRM"
-          echo "=========================================="
-          EOF
+          cat > release/install.sh << 'INSTALL_EOF'
+#!/bin/bash
+set -e
+
+VERSION="${1:-latest}"
+IMAGE_FILE="cordys-crm-${VERSION}-amd64.tar.gz"
+IMAGE_NAME="ghcr.io/1panel-dev/cordyscrm"
+
+echo "=========================================="
+echo "Cordys CRM 离线安装脚本"
+echo "版本: ${VERSION}"
+echo "=========================================="
+
+if [ -f "$IMAGE_FILE" ]; then
+    echo "正在加载 Docker 镜像..."
+    gunzip -c "$IMAGE_FILE" | docker load
+else
+    echo "错误: 找不到镜像文件 $IMAGE_FILE"
+    exit 1
+fi
+
+echo "正在启动 Cordys CRM..."
+docker run -d \
+  --name cordys-crm \
+  --restart unless-stopped \
+  -p 8081:8081 \
+  -p 8082:8082 \
+  -v ~/cordys:/opt/cordys \
+  ${IMAGE_NAME}:${VERSION}
+
+echo ""
+echo "=========================================="
+echo "Cordys CRM 安装完成！"
+echo "访问地址: http://localhost:8081"
+echo "默认账号: admin"
+echo "默认密码: CordysCRM"
+echo "=========================================="
+INSTALL_EOF
           
           chmod +x release/install.sh
           
@@ -157,11 +150,11 @@ jobs:
       
       - name: 创建离线安装包 (arm64)
         run: |
-          # 拉取 arm64 镜像
-          docker pull --platform linux/arm64 ${{ env.DOCKERHUB_REPO }}:${{ steps.version.outputs.version }}
+          # 拉取 arm64 镜像（从 GitHub Container Registry）
+          docker pull --platform linux/arm64 ${{ env.IMAGE_REPO }}:${{ steps.version.outputs.version }}
           
           # 保存镜像
-          docker save ${{ env.DOCKERHUB_REPO }}:${{ steps.version.outputs.version }} | gzip > release/cordys-crm-${{ steps.version.outputs.version_number }}-arm64.tar.gz
+          docker save ${{ env.IMAGE_REPO }}:${{ steps.version.outputs.version }} | gzip > release/cordys-crm-${{ steps.version.outputs.version_number }}-arm64.tar.gz
       
       - name: 计算校验和
         run: |
