--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -9,7 +9,7 @@
 # 功能：
 #   - 多平台构建 (amd64, arm64)
 #   - 自动标签管理
-#   - 推送到 Docker Hub 和 GitHub Container Registry
+#   - 推送到 GitHub Container Registry（无需额外配置 secrets）
 # ============================================================================
 
 name: Docker Build and Push
@@ -45,9 +45,8 @@ on:
         default: 'linux/amd64,linux/arm64'
 
 env:
-  # 镜像仓库配置
-  DOCKERHUB_REPO: 1panel/cordys-crm
-  GHCR_REPO: ghcr.io/${{ github.repository }}
+  # 使用 GitHub Container Registry（无需额外配置 secrets）
+  IMAGE_REPO: ghcr.io/${{ github.repository }}
   
   # 构建配置
   DOCKER_BUILDKIT: 1
@@ -85,8 +84,7 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: |
-            ${{ env.DOCKERHUB_REPO }}
-            ${{ env.GHCR_REPO }}
+            ${{ env.IMAGE_REPO }}
           tags: |
             type=ref,event=branch
             type=ref,event=pr
@@ -128,13 +126,6 @@ jobs:
           driver-opts: |
             image=moby/buildkit:master
             network=host
-      
-      - name: 登录 Docker Hub
-        if: github.event_name != 'pull_request'
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
       
       - name: 登录 GitHub Container Registry
         if: github.event_name != 'pull_request'
@@ -181,16 +172,6 @@ jobs:
         run: |
           rm -rf /tmp/.buildx-cache
           mv /tmp/.buildx-cache-new /tmp/.buildx-cache
-      
-      - name: 更新 Docker Hub 描述
-        if: github.event_name != 'pull_request' && github.ref == 'refs/heads/main'
-        uses: peter-evans/dockerhub-description@v4
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-          repository: ${{ env.DOCKERHUB_REPO }}
-          readme-filepath: ./README.md
-          short-description: "Cordys CRM - 新一代开源 AI CRM 系统"
 
   # ============================================================
   # 安全扫描
@@ -207,7 +188,7 @@ jobs:
       - name: 运行 Trivy 漏洞扫描
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: '${{ env.DOCKERHUB_REPO }}:latest'
+          image-ref: '${{ env.IMAGE_REPO }}:latest'
           format: 'sarif'
           output: 'trivy-results.sarif'
           severity: 'CRITICAL,HIGH'
@@ -231,8 +212,7 @@ jobs:
         run: |
           if [ "${{ needs.build.result }}" == "success" ]; then
             echo "✅ Docker 镜像构建成功"
-            echo "镜像: ${{ env.DOCKERHUB_REPO }}"
+            echo "镜像: ${{ env.IMAGE_REPO }}"
           else
             echo "❌ Docker 镜像构建失败"
           fi
-
