--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,218 +1,135 @@
 # ============================================================================
-# Cordys CRM - Docker 镜像构建与发布工作流
+# Cordys CRM - Docker 镜像构建工作流
 #
-# 触发条件：
-#   - 推送标签 (v*)
-#   - 推送到 main/develop 分支
-#   - 手动触发
-#
-# 功能：
-#   - 多平台构建 (amd64, arm64)
-#   - 自动标签管理
-#   - 推送到 GitHub Container Registry（无需额外配置 secrets）
+# 功能：构建并推送镜像到 GitHub Container Registry
+# 触发：推送到 main 分支、创建 Release、手动触发
 # ============================================================================
 
 name: Docker Build and Push
 
 on:
   push:
-    branches:
-      - main
-      - develop
-    tags:
-      - 'v*'
-    paths-ignore:
-      - '**.md'
-      - 'docs/**'
-      - '.gitignore'
+    branches: [main]
+    paths-ignore: ['**.md', 'docs/**']
   
-  pull_request:
-    branches:
-      - main
-    paths-ignore:
-      - '**.md'
-      - 'docs/**'
+  release:
+    types: [published]
   
   workflow_dispatch:
     inputs:
       version:
         description: '镜像版本标签'
-        required: false
         default: 'latest'
-      platforms:
-        description: '构建平台 (linux/amd64,linux/arm64)'
-        required: false
-        default: 'linux/amd64,linux/arm64'
 
 env:
-  # 使用 GitHub Container Registry（无需额外配置 secrets）
   IMAGE_REPO: ghcr.io/${{ github.repository }}
-  
-  # 构建配置
-  DOCKER_BUILDKIT: 1
-  COMPOSE_DOCKER_CLI_BUILD: 1
 
 jobs:
-  # ============================================================
-  # 构建信息准备
-  # ============================================================
-  prepare:
-    runs-on: ubuntu-latest
-    outputs:
-      version: ${{ steps.meta.outputs.version }}
-      tags: ${{ steps.meta.outputs.tags }}
-      labels: ${{ steps.meta.outputs.labels }}
-      platforms: ${{ steps.platforms.outputs.platforms }}
-    
-    steps:
-      - name: 检出代码
-        uses: actions/checkout@v4
-        
-      - name: 确定构建平台
-        id: platforms
-        run: |
-          if [ "${{ github.event_name }}" == "workflow_dispatch" ]; then
-            echo "platforms=${{ github.event.inputs.platforms }}" >> $GITHUB_OUTPUT
-          elif [ "${{ github.event_name }}" == "pull_request" ]; then
-            echo "platforms=linux/amd64" >> $GITHUB_OUTPUT
-          else
-            echo "platforms=linux/amd64,linux/arm64" >> $GITHUB_OUTPUT
-          fi
-      
-      - name: Docker 元数据
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: |
-            ${{ env.IMAGE_REPO }}
-          tags: |
-            type=ref,event=branch
-            type=ref,event=pr
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=semver,pattern={{major}}
-            type=raw,value=latest,enable={{is_default_branch}}
-            type=raw,value=${{ github.event.inputs.version }},enable=${{ github.event_name == 'workflow_dispatch' }}
-            type=sha,prefix=,suffix=,format=short
-          labels: |
-            org.opencontainers.image.title=Cordys CRM
-            org.opencontainers.image.description=新一代开源 AI CRM 系统
-            org.opencontainers.image.vendor=FIT2CLOUD
-
-  # ============================================================
-  # 构建并推送 Docker 镜像
-  # ============================================================
   build:
     runs-on: ubuntu-latest
-    needs: prepare
     permissions:
-      contents: read
+      contents: write
       packages: write
+    
+    outputs:
+      version: ${{ steps.version.outputs.version }}
     
     steps:
       - name: 检出代码
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
+      
+      - name: 确定版本号
+        id: version
+        run: |
+          if [ "${{ github.event_name }}" == "release" ]; then
+            echo "version=${{ github.event.release.tag_name }}" >> $GITHUB_OUTPUT
+          elif [ -n "${{ github.event.inputs.version }}" ]; then
+            echo "version=${{ github.event.inputs.version }}" >> $GITHUB_OUTPUT
+          else
+            echo "version=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+          fi
       
       - name: 设置 QEMU
         uses: docker/setup-qemu-action@v3
-        with:
-          platforms: all
       
       - name: 设置 Docker Buildx
         uses: docker/setup-buildx-action@v3
-        with:
-          driver-opts: |
-            image=moby/buildkit:master
-            network=host
       
       - name: 登录 GitHub Container Registry
-        if: github.event_name != 'pull_request'
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
       
-      - name: 缓存 Docker 层
-        uses: actions/cache@v4
+      - name: 生成镜像标签
+        id: meta
+        uses: docker/metadata-action@v5
         with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-buildx-
-      
-      - name: 获取版本号
-        id: version
-        run: |
-          if [[ "${{ github.ref }}" == refs/tags/v* ]]; then
-            VERSION=${GITHUB_REF#refs/tags/}
-          else
-            VERSION=${{ github.sha }}
-          fi
-          echo "version=${VERSION}" >> $GITHUB_OUTPUT
+          images: ${{ env.IMAGE_REPO }}
+          tags: |
+            type=ref,event=branch
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+            type=raw,value=latest,enable={{is_default_branch}}
+            type=sha,format=short
       
       - name: 构建并推送镜像
         uses: docker/build-push-action@v5
         with:
           context: .
           file: ./docker/Dockerfile
-          platforms: ${{ needs.prepare.outputs.platforms }}
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ needs.prepare.outputs.tags }}
-          labels: ${{ needs.prepare.outputs.labels }}
-          build-args: |
-            CRM_VERSION=${{ steps.version.outputs.version }}
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
-          provenance: false
-      
-      - name: 移动缓存
-        run: |
-          rm -rf /tmp/.buildx-cache
-          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
+          platforms: linux/amd64,linux/arm64
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          build-args: CRM_VERSION=${{ steps.version.outputs.version }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
-  # ============================================================
-  # 安全扫描
-  # ============================================================
-  security-scan:
+  # Release 时创建离线安装包
+  release:
     runs-on: ubuntu-latest
     needs: build
-    if: github.event_name != 'pull_request'
+    if: github.event_name == 'release'
+    permissions:
+      contents: write
+      packages: read
     
     steps:
       - name: 检出代码
         uses: actions/checkout@v4
       
-      - name: 运行 Trivy 漏洞扫描
-        uses: aquasecurity/trivy-action@master
+      - name: 登录 GHCR
+        uses: docker/login-action@v3
         with:
-          image-ref: '${{ env.IMAGE_REPO }}:latest'
-          format: 'sarif'
-          output: 'trivy-results.sarif'
-          severity: 'CRITICAL,HIGH'
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       
-      - name: 上传 Trivy 扫描结果
-        uses: github/codeql-action/upload-sarif@v3
-        if: always()
-        with:
-          sarif_file: 'trivy-results.sarif'
-
-  # ============================================================
-  # 发布通知
-  # ============================================================
-  notify:
-    runs-on: ubuntu-latest
-    needs: [build, security-scan]
-    if: always() && github.event_name != 'pull_request'
-    
-    steps:
-      - name: 发送构建结果通知
+      - name: 创建离线安装包
         run: |
-          if [ "${{ needs.build.result }}" == "success" ]; then
-            echo "✅ Docker 镜像构建成功"
-            echo "镜像: ${{ env.IMAGE_REPO }}"
-          else
-            echo "❌ Docker 镜像构建失败"
-          fi
+          mkdir -p release
+          VERSION="${{ needs.build.outputs.version }}"
+          
+          # 拉取并保存镜像
+          docker pull --platform linux/amd64 ${{ env.IMAGE_REPO }}:latest
+          docker save ${{ env.IMAGE_REPO }}:latest | gzip > release/cordys-crm-${VERSION#v}-amd64.tar.gz
+          
+          docker pull --platform linux/arm64 ${{ env.IMAGE_REPO }}:latest
+          docker save ${{ env.IMAGE_REPO }}:latest | gzip > release/cordys-crm-${VERSION#v}-arm64.tar.gz
+          
+          # 复制配置文件
+          cp docker/env.external.template release/ 2>/dev/null || true
+          cp docker/docker-compose.external.yml release/ 2>/dev/null || true
+          cp docker/docker-compose.traefik.yml release/ 2>/dev/null || true
+          
+          # 校验和
+          cd release && sha256sum *.tar.gz > SHA256SUMS.txt
+      
+      - name: 上传到 Release
+        uses: softprops/action-gh-release@v1
+        with:
+          files: release/*
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
