--- a/docker/docker-compose.external.yml
+++ b/docker/docker-compose.external.yml
@@ -72,6 +72,9 @@ services:
       MYSQL_USERNAME: ${MYSQL_USERNAME:-cordys}
       MYSQL_PASSWORD: ${MYSQL_PASSWORD:?错误: 请设置 MYSQL_PASSWORD 环境变量}
       MYSQL_SSL: ${MYSQL_SSL:-false}
+      MYSQL_SSL_MODE: ${MYSQL_SSL_MODE:-}          # e.g. VERIFY_CA / VERIFY_IDENTITY
+      MYSQL_SSL_CA_PATH: ${MYSQL_SSL_CA_PATH:-}    # 挂载到容器内的 CA 文件路径
+      MYSQL_SSL_CA: ${MYSQL_SSL_CA:-}              # 直接填 PEM 内容（可多行）
       MYSQL_POOL_MIN: ${MYSQL_POOL_MIN:-5}
       MYSQL_POOL_MAX: ${MYSQL_POOL_MAX:-20}
       
@@ -81,6 +84,7 @@ services:
       REDIS_HOST: ${REDIS_HOST:?错误: 请设置 REDIS_HOST 环境变量}
       REDIS_PORT: ${REDIS_PORT:-6379}
       REDIS_PASSWORD: ${REDIS_PASSWORD:-}
+      REDIS_SSL: ${REDIS_SSL:-true}
       
       # ========================================
       # MCP Server 配置
