feat: add support for Spring Boot executable jar in Docker setup

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -118,6 +118,8 @@ COPY --from=build ${DEPENDENCY}/BOOT-INF/lib /app/lib
 COPY --from=build ${DEPENDENCY}/META-INF /app/META-INF
 COPY --from=build ${DEPENDENCY}/BOOT-INF/classes /app
 COPY --from=build /build/backend/${MODULE}/src/main/resources/static /app/static
+# 备份原始 Spring Boot 可执行包，便于回退使用 -jar 方式
+COPY --from=build /build/backend/${MODULE}/target/app-*.jar /app/app.jar
 
 # 复制配置和启动脚本
 COPY installer/shells /shells
